# benchmarking-arrow

./: README.md  atr-notes.txt  run.sh
cpp/: CMakeLists.txt  atr-cpp-notes.txt
cpp/c/: scan.c
cpp/src/: BenchmarkResult.cpp  BenchmarkResult.h  CLikeRoutine.cpp  CLikeRoutine.h  Debug.h  InMemoryFile.cpp  InMemoryFile.h  PeakPerformance.cpp  PeakPerformance.h  PeakPerformanceJava.cpp  PeakPerformanceJava.h  arrow-reader-example.cpp  arrow-reader-example.h  arrow-reader.cpp  arrow-reader.h  arrow-writer-example.cpp  arrow-writer-example.h  common.h  main.cc  notes.txt
src/main/java/com/github/animeshtrivedi/anoc/: ArrowMemoryReader.java  ArrowReader.java  ArrowSingleFileReader.java  ArrowSingleFileReaderLite.java  BenchmarkConfiguration.java  BenchmarkResults.java  CrailSeekableByteChannel.java  HDFSSeekableByteChannel.java  HDFSWritableByteChannel.java  HdfsSeekableByteChannel.java  JavaMain.java  Main.java  MemoryIOChannel.java  ParquetToArrow.java  ParseOptions.java
src/main/java/com/github/animeshtrivedi/arrow/: ArrowIntReader.java
src/main/java/com/github/animeshtrivedi/benchmark/: ArrowFileDumper.java  ArrowHolderReader.java  ArrowMemoryBench.java  ArrowMemoryReader.java  ArrowReader.java  ArrowReaderDebug.java  ArrowReaderHolder.java  ArrowReaderUnsafe.java  ArrowSingleFileReaderLite.java  BenchmarkConfiguration.java  BenchmarkDebugConfiguration.java  BenchmarkResults.java  Configuration.java  CrailSeekableByteChannel.java  DataInterface.java  DebugAllocatorListener.java  ExecuteTest.java  HDFSSeekableByteChannel.java  HDFSWritableByteChannel.java  InputType.java  JavaUtils.java  Main.java  MemoryChannel.java  MemoryIOChannel.java  OffHeapMemoryChannel.java  OnHeapMemoryChannel.java  ParquetToArrow.java  ParquetToArrowV2.java  ParseOptions.java  PeakPerformance.java  Platform.java  RunGC.java  TimedMemoryChannel.java  TracerAllocator.java  UnsafeBenchmark.java  WrapperAllocator.java
src/main/java/com/github/animeshtrivedi/generator/: ArrowDataGenerator.java  ArrowDataGeneratorV2.java  BinaryGenerator.java  GeneratorFactory.java  IntegerGenerator.java  LongGenerator.java
src/main/resources/: log4j.properties
src/main/scala/com/github/animeshtrivedi/anoc/: ScalaMain.scala  Utils.scala
src/main/scala/com/github/animeshtrivedi/benchmark/: ScalaMain.scala  Utils.scala
